--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Cookie Consent by https://www.FreePrivacyPolicy.com -->
-    <script
-      type="text/javascript"
-      src="//www.FreePrivacyPolicy.com/cookie-consent/releases/3.0.0/cookie-consent.js"
-    ></script>
-    <script type="text/javascript">
-      document.addEventListener('DOMContentLoaded', function() {
-        cookieconsent.run({
-          notice_banner_type: 'headline',
-          consent_type: 'express',
-          palette: 'dark',
-          change_preferences_selector: '#changePreferences',
-          language: 'en',
-          website_name: 'hypeofpipe.github.io',
-        });
-      });
-    </script>
-
-    <!-- Google Analytics -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
-      type="text/plain"
-      cookie-consent="tracking"
       async
       src="https://www.googletagmanager.com/gtag/js?id=UA-149764548-1"
     ></script>
-    <script type="text/plain" cookie-consent="tracking">
+    <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+      function gtag() {
+        dataLayer.push(arguments);
+      }
       gtag('js', new Date());
 
       gtag('config', 'UA-149764548-1');
@@ -37,23 +18,12 @@
 
     <!-- end of Google Analytics-->
 
-    <noscript
-      >GDPR Cookie Consent by
-      <a href="https://www.freeprivacypolicy.com/"
-        >FreePrivacyPolicy</a
-      ></noscript
-    >
-    <!-- End Cookie Consent -->
-
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="%PUBLIC_URL%/main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="A personal dev blog" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
