--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="shortcut icon" href="/volodymyrvoleniuk.github.io/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="logo192.png"/><link rel="manifest" href="/volodymyrvoleniuk.github.io/manifest.json"/><title>React App</title><link href="/volodymyrvoleniuk.github.io/static/css/main.dfca195d.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(l){function e(e){for(var r,t,n=e[0],o=e[1],u=e[2],i=0,p=[];i<n.length;i++)t=n[i],Object.prototype.hasOwnProperty.call(a,t)&&a[t]&&p.push(a[t][0]),a[t]=0;for(r in o)Object.prototype.hasOwnProperty.call(o,r)&&(l[r]=o[r]);for(s&&s(e);p.length;)p.shift()();return c.push.apply(c,u||[]),f()}function f(){for(var e,r=0;r<c.length;r++){for(var t=c[r],n=!0,o=1;o<t.length;o++){var u=t[o];0!==a[u]&&(n=!1)}n&&(c.splice(r--,1),e=i(i.s=t[0]))}return e}var t={},a={1:0},c=[];function i(e){if(t[e])return t[e].exports;var r=t[e]={i:e,l:!1,exports:{}};return l[e].call(r.exports,r,r.exports,i),r.l=!0,r.exports}i.m=l,i.c=t,i.d=function(e,r,t){i.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},i.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},i.t=function(r,e){if(1&e&&(r=i(r)),8&e)return r;if(4&e&&"object"==typeof r&&r&&r.__esModule)return r;var t=Object.create(null);if(i.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:r}),2&e&&"string"!=typeof r)for(var n in r)i.d(t,n,function(e){return r[e]}.bind(null,n));return t},i.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return i.d(r,"a",r),r},i.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},i.p="/volodymyrvoleniuk.github.io/";var r=window["webpackJsonphypeofpipe.github.io"]=window["webpackJsonphypeofpipe.github.io"]||[],n=r.push.bind(r);r.push=e,r=r.slice();for(var o=0;o<r.length;o++)e(r[o]);var s=n;f()}([])</script><script src="/volodymyrvoleniuk.github.io/static/js/2.1e3a6425.chunk.js"></script><script src="/volodymyrvoleniuk.github.io/static/js/main.ad044c21.chunk.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="./favicon.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		
+		<link href="./_app/immutable/assets/2.CmX1UN0_.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DADz9BWg.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CXCMFXCq.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.BvLojk_z.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.PRJMstsL.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.WYq3ftnW.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.bLh4Lcoh.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.CZUng9F4.js">
+	</head>
+	<body data-sveltekit-preload-data="hover">
+		<div style="display: contents">  <div class="container svelte-ro52cj"><h1 class="svelte-ro52cj" data-svelte-h="svelte-dkedba">My Portfolio</h1> <p class="svelte-ro52cj" data-svelte-h="svelte-d6jef1">Hi, I&#39;m a dedicated software developer with a passion for coding and problem-solving.</p> <h2 class="svelte-ro52cj" data-svelte-h="svelte-1w8bmy8">Skills</h2> <ul><li>JavaScript</li><li>Svelte</li><li>React</li><li>Node.js</li></ul> <h2 class="svelte-ro52cj" data-svelte-h="svelte-7jt1gw">Projects</h2> <div><div><h3>Project One</h3> <p class="svelte-ro52cj">A fantastic project.</p> <a href="http://example.com/project-one" target="_blank" class="svelte-ro52cj">View Project</a> </div></div> <h2 class="svelte-ro52cj" data-svelte-h="svelte-1bhajqs">Contact Me</h2> <form data-svelte-h="svelte-1kghckm"><input type="email" placeholder="Your Email" required class="svelte-ro52cj"> <textarea placeholder="Your Message" required class="svelte-ro52cj"></textarea> <button type="submit" class="svelte-ro52cj">Send</button></form> </div> 
+			
+			<script>
+				{
+					__sveltekit_efv8qa = {
+						base: new URL(".", location).pathname.slice(0, -1),
+						assets: "/hypeofpipe.github.io"
+					};
+
+					const element = document.currentScript.parentElement;
+
+					const data = [null,null];
+
+					Promise.all([
+						import("./_app/immutable/entry/start.DADz9BWg.js"),
+						import("./_app/immutable/entry/app.PRJMstsL.js")
+					]).then(([kit, app]) => {
+						kit.start(app, element, {
+							node_ids: [0, 2],
+							data,
+							form: null,
+							error: null
+						});
+					});
+				}
+			</script>
+		</div>
+	</body>
+</html>
